Criando estilização de layout, temos o header e o footer padrao (por enquanto) + a index funcionando com responsividade. basta replicar

--- a/Views/Shared/_Layout.cshtml.css
+++ b/Views/Shared/_Layout.cshtml.css
@@ -1,8 +1,11 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body{
+  background: #edf2f7;
+}
+
 a.navbar-brand {
-  white-space: normal;
   text-align: center;
   word-break: break-all;
 }
