--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,43 +4,128 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Dashboard</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Dashboard.styles.css" asp-append-version="true" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script defer>
+        function toggleMenu() {
+          let menuMobile = document.getElementById('mobile-menu');
+            if (menuMobile.classList.contains('hidden')) {
+                menuMobile.classList.remove('hidden');
+                menuMobile.classList.add('active');
+                //document.querySelector('.icon').src = "assets/img/menu_white_36dp.svg";
+            } else {
+                menuMobile.classList.add('hidden');
+                menuMobile.classList.remove('active');
+                //document.querySelector('.icon').src = "assets/img/close_white_36dp.svg";
+            }
+        }
+
+
+        function handleResize() {
+            let menuMobile = document.getElementById('mobile-menu');
+            if (window.innerWidth >= 768 && menuMobile.classList.contains('hidden')) {
+                menuMobile.classList.add('hidden');
+            } else if (window.innerWidth < 768 && !menuMobile.classList.contains('hidden')) {
+                menuMobile.classList.remove('hidden');
+            } else if (window.innerWidth >= 768 && !menuMobile.classList.contains('hidden') && menuMobile.classList.contains('active')) {
+                menuMobile.classList.add('hidden');
+            }
+        }
+
+        window.addEventListener('resize', handleResize);
+
+        window.addEventListener('DOMContentLoaded', (event) => {
+            handleResize();
+        });
+        document.addEventListener('DOMContentLoaded', function () {
+            const toggleButtons = document.querySelectorAll('[data-modal-toggle]');
+            
+            toggleButtons.forEach(button => {
+                button.addEventListener('click', function () {
+                    const modalId = this.getAttribute('data-modal-toggle');
+                    const modal = document.getElementById(modalId);
+
+                    if (modal.classList.contains('hidden')) {
+                        modal.classList.remove('hidden');
+                        modal.classList.add('flex');
+                    } else {
+                        modal.classList.remove('flex');
+                        modal.classList.add('hidden');
+                    }
+                });
+            });
+        });
+
+    </script>
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+<body class="h-screen flex justify-center">
+    <div class="mx-auto w-screen">
+        <header>
+            <!-- div header -->
+            <div class="bg-white rounded shadow-lg py-5 px-5 flex">
+                <!-- hidden menu button on responsive mobile layout -->
+                <button class="md:hidden text-gray-700" onclick="toggleMenu()">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                    </svg>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                <!-- hidden div logo on responsive mobile layout -->
+                <div class="flex md:hidden mx-auto">
+                    <svg class="cursor-pointer" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg"><title>App</title>
+                        <path d="M1 17H0H1ZM7 17H6H7ZM17 27V28V27ZM27 17H28H27ZM17 0C12.4913 0 8.1673 1.79107 4.97918 4.97918L6.3934 6.3934C9.20644 3.58035 13.0218 2 17 2V0ZM4.97918 4.97918C1.79107 8.1673 0 12.4913 0 17H2C2 13.0218 3.58035 9.20644 6.3934 6.3934L4.97918 4.97918ZM0 17C0 21.5087 1.79107 25.8327 4.97918 29.0208L6.3934 27.6066C3.58035 24.7936 2 20.9782 2 17H0ZM4.97918 29.0208C8.1673 32.2089 12.4913 34 17 34V32C13.0218 32 9.20644 30.4196 6.3934 27.6066L4.97918 29.0208ZM17 34C21.5087 34 25.8327 32.2089 29.0208 29.0208L27.6066 27.6066C24.7936 30.4196 20.9782 32 17 32V34ZM29.0208 29.0208C32.2089 25.8327 34 21.5087 34 17H32C32 20.9782 30.4196 24.7936 27.6066 27.6066L29.0208 29.0208ZM34 17C34 12.4913 32.2089 8.1673 29.0208 4.97918L27.6066 6.3934C30.4196 9.20644 32 13.0218 32 17H34ZM29.0208 4.97918C25.8327 1.79107 21.5087 0 17 0V2C20.9782 2 24.7936 3.58035 27.6066 6.3934L29.0208 4.97918ZM17 6C14.0826 6 11.2847 7.15893 9.22183 9.22183L10.636 10.636C12.3239 8.94821 14.6131 8 17 8V6ZM9.22183 9.22183C7.15893 11.2847 6 14.0826 6 17H8C8 14.6131 8.94821 12.3239 10.636 10.636L9.22183 9.22183ZM6 17C6 19.9174 7.15893 22.7153 9.22183 24.7782L10.636 23.364C8.94821 21.6761 8 19.3869 8 17H6ZM9.22183 24.7782C11.2847 26.8411 14.0826 28 17 28V26C14.6131 26 12.3239 25.0518 10.636 23.364L9.22183 24.7782ZM17 28C19.9174 28 22.7153 26.8411 24.7782 24.7782L23.364 23.364C21.6761 25.0518 19.3869 26 17 26V28ZM24.7782 24.7782C26.8411 22.7153 28 19.9174 28 17H26C26 19.3869 25.0518 21.6761 23.364 23.364L24.7782 24.7782ZM28 17C28 14.0826 26.8411 11.2847 24.7782 9.22183L23.364 10.636C25.0518 12.3239 26 14.6131 26 17H28ZM24.7782 9.22183C22.7153 7.15893 19.9174 6 17 6V8C19.3869 8 21.6761 8.94821 23.364 10.636L24.7782 9.22183ZM10.3753 8.21913C6.86634 11.0263 4.86605 14.4281 4.50411 18.4095C4.14549 22.3543 5.40799 26.7295 8.13176 31.4961L9.86824 30.5039C7.25868 25.9371 6.18785 21.9791 6.49589 18.5905C6.80061 15.2386 8.46699 12.307 11.6247 9.78087L10.3753 8.21913ZM23.6247 25.7809C27.1294 22.9771 29.1332 19.6127 29.4958 15.6632C29.8549 11.7516 28.5904 7.41119 25.8682 2.64741L24.1318 3.63969C26.7429 8.20923 27.8117 12.1304 27.5042 15.4803C27.2001 18.7924 25.5372 21.6896 22.3753 24.2191L23.6247 25.7809Z" fill="#1F2937"/>
+                    </svg>
+                    <h2 class="font-normal text-2xl leading-6 text-gray-800 pl-4">App</h2>
+                </div>
+                <!-- non hidden div logo on responsive layout -->
+                <div class="flex hidden md:flex">
+                    <svg class="cursor-pointer" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg"><title>App</title>
+                        <path d="M1 17H0H1ZM7 17H6H7ZM17 27V28V27ZM27 17H28H27ZM17 0C12.4913 0 8.1673 1.79107 4.97918 4.97918L6.3934 6.3934C9.20644 3.58035 13.0218 2 17 2V0ZM4.97918 4.97918C1.79107 8.1673 0 12.4913 0 17H2C2 13.0218 3.58035 9.20644 6.3934 6.3934L4.97918 4.97918ZM0 17C0 21.5087 1.79107 25.8327 4.97918 29.0208L6.3934 27.6066C3.58035 24.7936 2 20.9782 2 17H0ZM4.97918 29.0208C8.1673 32.2089 12.4913 34 17 34V32C13.0218 32 9.20644 30.4196 6.3934 27.6066L4.97918 29.0208ZM17 34C21.5087 34 25.8327 32.2089 29.0208 29.0208L27.6066 27.6066C24.7936 30.4196 20.9782 32 17 32V34ZM29.0208 29.0208C32.2089 25.8327 34 21.5087 34 17H32C32 20.9782 30.4196 24.7936 27.6066 27.6066L29.0208 29.0208ZM34 17C34 12.4913 32.2089 8.1673 29.0208 4.97918L27.6066 6.3934C30.4196 9.20644 32 13.0218 32 17H34ZM29.0208 4.97918C25.8327 1.79107 21.5087 0 17 0V2C20.9782 2 24.7936 3.58035 27.6066 6.3934L29.0208 4.97918ZM17 6C14.0826 6 11.2847 7.15893 9.22183 9.22183L10.636 10.636C12.3239 8.94821 14.6131 8 17 8V6ZM9.22183 9.22183C7.15893 11.2847 6 14.0826 6 17H8C8 14.6131 8.94821 12.3239 10.636 10.636L9.22183 9.22183ZM6 17C6 19.9174 7.15893 22.7153 9.22183 24.7782L10.636 23.364C8.94821 21.6761 8 19.3869 8 17H6ZM9.22183 24.7782C11.2847 26.8411 14.0826 28 17 28V26C14.6131 26 12.3239 25.0518 10.636 23.364L9.22183 24.7782ZM17 28C19.9174 28 22.7153 26.8411 24.7782 24.7782L23.364 23.364C21.6761 25.0518 19.3869 26 17 26V28ZM24.7782 24.7782C26.8411 22.7153 28 19.9174 28 17H26C26 19.3869 25.0518 21.6761 23.364 23.364L24.7782 24.7782ZM28 17C28 14.0826 26.8411 11.2847 24.7782 9.22183L23.364 10.636C25.0518 12.3239 26 14.6131 26 17H28ZM24.7782 9.22183C22.7153 7.15893 19.9174 6 17 6V8C19.3869 8 21.6761 8.94821 23.364 10.636L24.7782 9.22183ZM10.3753 8.21913C6.86634 11.0263 4.86605 14.4281 4.50411 18.4095C4.14549 22.3543 5.40799 26.7295 8.13176 31.4961L9.86824 30.5039C7.25868 25.9371 6.18785 21.9791 6.49589 18.5905C6.80061 15.2386 8.46699 12.307 11.6247 9.78087L10.3753 8.21913ZM23.6247 25.7809C27.1294 22.9771 29.1332 19.6127 29.4958 15.6632C29.8549 11.7516 28.5904 7.41119 25.8682 2.64741L24.1318 3.63969C26.7429 8.20923 27.8117 12.1304 27.5042 15.4803C27.2001 18.7924 25.5372 21.6896 22.3753 24.2191L23.6247 25.7809Z" fill="#1F2937"/>
+                    </svg>
+                    <h2 class="font-normal text-2xl leading-6 text-gray-800 pl-4">App</h2>
+                </div>
+                <!-- non hidden itens menu responsive layout -->
+                <div class="hidden md:flex space-x-5 mx-auto">
+                    <a href="#" class="text-yellow-500 text-center hover:text-yellow-500 "><span class="text-2xl">⭐</span> Favoritos</a>
+                    <a href="#" class="text-gray-700 text-center hover:text-yellow-500"><span class="text-2xl">🛋</span> Sala de estar</a>
+                    <a href="#" class="text-gray-700 text-center hover:text-yellow-500"><span class="text-2xl">🛏</span> Quarto</a>
+                    <a href="#" class="text-gray-700 text-center hover:text-yellow-500"><span class="text-2xl">🍽</span> Cozinha</a>
+                    <a href="#" class="text-gray-700 text-center hover:text-yellow-500"><span class="text-2xl">🚽</span> Banheiro</a>
+                </div>
+
+                <!-- hidden itens menu on responsive mobile layout -->
+                <div class="grid grid-cols-1 flex-wrap absolute mt-8 ml bg-white rounded-xl px-2 hidden" id="mobile-menu">
+                    <div class="grid grid-cols-1 gap-4">
+                        <a href="#" class="text-yellow-500"><span class="text-3xl">⭐</span> Favoritos</a>
+                    </div>
+                    <div class="grid grid-cols-1 gap-4">
+                        <a href="#" class="text-gray-700 hover:text-yellow-500"><span class="text-3xl">🛋</span> Sala de estar</a>
+                    </div>
+                    <div class="grid grid-cols-1 gap-4">
+                        <a href="#" class="text-gray-700 hover:text-yellow-500"><span class="text-3xl">🛏</span> Quarto</a>
+                    </div>
+                    <div class="grid grid-cols-1 gap-4">
+                        <a href="#" class="text-gray-700 hover:text-yellow-500"><span class="text-3xl">🍽</span> Cozinha</a>
+                    </div>
+                    <div class="grid grid-cols-1 gap-4">
+                        <a href="#" class="text-gray-700 hover:text-yellow-500"><span class="text-3xl">🚽</span> Banheiro</a>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+        
+        </header>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Dashboard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+
+
+        <footer class="border-top footer text-muted">
+            <div class="container">
+                &copy; 2024 - Dashboard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+        </footer>
+    </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
