Trocado os nomes e referencias de DashBoard para SmartBoard que é o nome do projeto

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "SmartBoard";
 }
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle">
