--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Dashboard</title>
+    <title>@ViewData["Title"] - SmartBoard</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Dashboard.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/SmartBoard.styles.css" asp-append-version="true" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer>
         function toggleMenu() {
@@ -122,7 +122,7 @@
 
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; 2024 - Dashboard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2024 - SmartBoard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </footer>
     </div>
