--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Dashboard
-@using Dashboard.Models
+﻿@using SmartBoard
+@using SmartBoard.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
