--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
 
         <footer class="border-top footer text-muted">
             <div class="container">
-                &copy; 2024 - SmartBoard - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2024 - SmartBoard - <a asp-area="" asp-controller="Login" asp-action="Privacy">Privacy</a>
             </div>
         </footer>
     </div>
