--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -26,13 +26,14 @@
                     <label for="exampleInputPassword1">Senha</label>
                     <input type="password" class="form-control w-full" id="InputPassword" placeholder="Sua Senha">
                 </div>
-                <button type="submit" class="text-white bg-gradient-to-r from-[#202020] via-[#171717] to-[#030303] 
-                                    hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-[#404040] 
-                                    dark:focus:ring-[#000000] shadow-lg shadow-gray dark:shadow-lg dark:shadow-black 
-                                    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full"
-                                    asp-controller="DeviceClient" asp-action="HomeClient">Login</button>
-                </form>
-
+                <button 
+                    type="submit" class="text-white bg-gradient-to-r from-[#202020] via-[#171717] to-[#030303] 
+                    hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-[#404040] 
+                    dark:focus:ring-[#000000] shadow-lg shadow-gray dark:shadow-lg dark:shadow-black 
+                    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full"
+                    asp-controller="DeviceClient" asp-action="HomeClient">Login
+                </button>
+            </form>
         </div>
     </div>
 </div>
