--- a/Views/DeviceClient/HomeClient.cshtml
+++ b/Views/DeviceClient/HomeClient.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "SmartBoard";
+    ViewData["Title"] = "SmartBoard Do Cliente";
 }
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle">
