--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="justify-center font-2xl w-80 align-middle mx-auto">
             <form asp-controller="Login" asp-action="Entrar" method="post">
                 <div class="form-group mb-3 mt-3">
-                    <label for="exampleInputEmail1">Email</label>
+                    <label for="login">Email</label>
                     <div class="relative">
                         <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                             <svg class="w-4 h-4 text-black-500 white:text-black-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
@@ -25,24 +25,23 @@
                                 <path d="M11.241 9.817c-.36.275-.801.425-1.255.427-.428 0-.845-.138-1.187-.395L0 2.6V14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2.5l-8.759 7.317Z"/>
                             </svg>
                         </div>
-                        <input type="text" id="InputEmail" asp-for="Login" aria-describedby="emailHelp" class="form-control border 
+                        <input type="text" id="login" asp-for="Login" class="form-control border 
                             text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full 
                             ps-10 p-2.5" placeholder="email@dominio.com" />
-                        @Html.ValidationMessageFor(x => x.Login)
                     </div>
+                    @Html.ValidationMessageFor(x => x.Login)
                 </div>
                 <div class="form-group mb-3 mt-3">
                     <label for="exampleInputPassword1">Senha</label>
-                    <input type="password" class="form-control w-full" asp-for="Senha" id="InputPassword" placeholder="Sua Senha">
+                    <input type="password" class="form-control w-full" asp-for="Senha" id="senha" placeholder="Sua Senha">
                     @Html.ValidationMessageFor(x => x.Senha)
                 </div>
+                
                 <button 
                     type="submit" class="text-white bg-gradient-to-r from-[#202020] via-[#171717] to-[#030303] 
                     hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-[#404040] 
                     dark:focus:ring-[#000000] shadow-lg shadow-gray dark:shadow-lg dark:shadow-black 
-                    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full"
-                    asp-controller="DeviceClient" asp-action="HomeClient">Login
-                </button>
+                    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full">Login</button>
             </form>
         </div>
     </div>
