--- a/Views/DeviceClient/HomeClient.cshtml
+++ b/Views/DeviceClient/HomeClient.cshtml
@@ -1,4 +1,5 @@
 @{
+    Layout = "_LayoutClient";
     ViewData["Title"] = "SmartBoard Do Cliente";
 }
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
