--- a/Views/DeviceTecnico/HomeTecnico.cshtml
+++ b/Views/DeviceTecnico/HomeTecnico.cshtml
@@ -1,4 +1,5 @@
 @{
+    Layout = "_LayoutTecnico";
     ViewData["Title"] = "SmartBoard Do TECNICO";
 }
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
