--- a/Views/DeviceClient/HomeClient.cshtml
+++ b/Views/DeviceClient/HomeClient.cshtml
@@ -5,27 +5,35 @@
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle">
         <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - QUARTO</span>
+            <span class="text-4xl">💡</span>
+            <span class="mt-2 text-center font-medium">LÂMPADA - QUARTO</span>
         </div>
+
         <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - SALA DE ESTAR</span>
+            <span class="text-4xl">💡</span>
+            <span class="mt-2 text-center font-medium">LÂMPADA - SALA DE ESTAR</span>
         </div>
+
         <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - COZINHA</span>
+            <span class="text-4xl">💡</span>
+            <span class="mt-2 text-center font-medium">LÂMPADA - COZINHA</span>
         </div>
+
         <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - BANHEIRO</span>
+            <span class="text-4xl">💡</span>
+            <span class="mt-2 text-center font-medium">LÂMPADA - BANHEIRO</span>
         </div>
+
         <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">📡</span>
-        <span class="mt-2 text-center font-medium">MICROONDAS - COZINHA</span>
+            <span class="text-4xl">📡</span>
+            <span class="mt-2 text-center font-medium">MICROONDAS - COZINHA</span>
         </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-2xl">➕</span>
+
+        <div data-modal-toggle="textModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
+            <span class="text-2xl">🔡</span>
+        </div>
+            <div data-modal-toggle="alarmModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
+            <span class="text-2xl">⏰</span>
         </div>
     </div> 
 </div>
@@ -41,6 +49,38 @@
 
         <form asp-controller="Arduino" asp-action="TurnOffLed" method="post">
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Close</button>
+        </form>
+    </div>
+</div>
+
+<div id="textModal" class="fixed inset-0 hidden items-center justify-center bg-gray-800 bg-opacity-50" data-modal-target="textModal">
+    <div class="bg-white p-4 rounded-lg max-w-lg mx-auto">
+        <h2 class="text-xl font-bold mb-4">LIGA ALGO</h2>
+        <p class="mb-4">VAI ME LIGA VAI!!!!</p>
+        <form asp-controller="Arduino" asp-action="SendText" method="post">
+             <div class="mb-4">
+                <label for="inputText" class="block text-gray-700">Texto</label>
+                <input type="text" id="inputText" name="inputText" class="border border-gray-300 p-2 rounded w-full" required>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
+        </form>
+    </div>
+</div>
+
+<div id="alarmModal" class="fixed inset-0 hidden items-center justify-center bg-gray-800 bg-opacity-50" data-modal-target="alarmModal">
+    <div class="bg-white p-4 rounded-lg max-w-lg mx-auto">
+        <h2 class="text-xl font-bold mb-4">Set Alarm</h2>
+        <p class="mb-4">Choose the duration for the alarm:</p>
+        <form asp-controller="Arduino" asp-action="SetAlarm" method="post">
+            <div class="mb-4">
+                <label for="alarmSeconds" class="block text-gray-700">Select seconds:</label>
+                <select id="alarmSeconds" name="alarmSeconds" class="border border-gray-300 p-2 rounded w-full" required>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                </select>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Submit</button>
         </form>
     </div>
 </div>
