--- a/Views/DeviceTecnico/HomeTecnico.cshtml
+++ b/Views/DeviceTecnico/HomeTecnico.cshtml
@@ -3,44 +3,16 @@
     ViewData["Title"] = "SmartBoard Do TECNICO";
 }
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
-    <div class="flex flex-wrap justify-center align-middle">
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - QUARTO</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - SALA DE ESTAR</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - COZINHA</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - BANHEIRO</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">📡</span>
-        <span class="mt-2 text-center font-medium">MICROONDAS - COZINHA</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-2xl">➕</span>
+    <div class="flex flex-wrap justify-center align-middle w-full">
+        <a asp-controller="DeviceTecnico" asp-action="CadastroCliente" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/4 md:w-1/4 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300 hover:text-gray-800">
+            <div>
+                <span class="text-4xl"></span>
+                <span class="mt-2 text-center font-medium">Novo Cliente</span>
+            </div>
+        </a>
+        <div class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/4 md:w-1/4 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
+            <span class="text-4xl"></span>
+            <span class="mt-2 text-center font-medium">Listar Clientes</span>
         </div>
     </div> 
-</div>
-<!-- Modal -->
-<div id="myModal" class="fixed inset-0 hidden items-center justify-center bg-gray-800 bg-opacity-50" data-modal-target="myModal">
-    <div class="bg-white p-4 rounded-lg max-w-lg mx-auto">
-        <h2 class="text-xl font-bold mb-4">LIGA ALGO</h2>
-        <p class="mb-4">VAI ME LIGA VAI!!!!</p>
-
-        <form asp-controller="Arduino" asp-action="TurnOnLed" method="post">
-            <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded">LIGA ESSA MERDA</button>
-        </form>
-
-        <form asp-controller="Arduino" asp-action="TurnOffLed" method="post">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Close</button>
-        </form>
-    </div>
 </div>
