--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -6,7 +6,7 @@
 }
 @if (TempData["MensagemErro"] != null)
 {
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger text-rose-600 text-center" role="alert">
         @TempData["MensagemErro"]
     </div>
 }
