--- a/Views/DeviceAdmin/HomeAdmin.cshtml
+++ b/Views/DeviceAdmin/HomeAdmin.cshtml
@@ -1,46 +1,109 @@
+@using SmartBoard.Models
+@model Tuple<List<ClienteModel>, List<PessoaModel>, List<TelefoneModel>>
 @{
     Layout = "_LayoutAdmin";
     ViewData["Title"] = "SmartBoard do Admin";
 }
-<div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
-    <div class="flex flex-wrap justify-center align-middle">
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - QUARTO</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - SALA DE ESTAR</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - COZINHA</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">💡</span>
-        <span class="mt-2 text-center font-medium">LÂMPADA - BANHEIRO</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-4xl">📡</span>
-        <span class="mt-2 text-center font-medium">MICROONDAS - COZINHA</span>
-        </div>
-        <div data-modal-toggle="myModal" class="bg-gray-200 p-4 rounded-xl flex flex-col items-center h-48 m-3 w-1/3 md:w-1/3 lg:w-1/5 justify-center items-center shadow-xl hover:shadow-orange-200 hover:cursor-pointer hover:scale-110 hover:bg-gray-300">
-        <span class="text-2xl">➕</span>
+<style>
+    .content-table {
+        border-collapse: collapse;
+        margin: 25px 0;
+        font-size: 0.9em;
+        font-family: sans-serif;
+        min-width: 400px;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+
+        .content-table thead tr {
+            background-color: #808080;
+            color: #ffffff;
+            text-align: left;
+        }
+
+        .content-table th,
+        .content-table td {
+            padding: 12px 15px;
+        }
+
+        .content-table tbody tr {
+            border-bottom: 1px solid #dddddd;
+        }
+
+            .content-table tbody tr:nth-of-type(even) {
+                background-color: #f3f3f3;
+            }
+
+            .content-table tbody tr:last-of-type {
+                border-bottom: 2px solid #808080;
+            }
+
+            .content-table tbody tr.active-row {
+                font-weight: bold;
+                color: #ffa500;
+            }
+</style>
+
+<div class="bg-white rounded-xl shadow-lg py-7 px-7 mt-5 justify-center">
+    <div class="flex flex-wrap justify-center align-middle w-full">
+        <span class="text-xl text-gray-800 w-4/5 align-middle text-center font-bold justify-center">Bem Vindo, Segue a lista de clientes disponíveis.</span>
+        <div class="flex flex-wrap justify-center align-middle w-4/5 mt-12">
+            <table id="myTable" class="content-table">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>Telefone</th>
+                        <th>Ativo</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="text-gray-700 hover:text-orange-400">
+                        <td>Maria Silva</td>
+                        <td>123.456.789-00</td>
+                        <td>(11) 98765-4321</td>
+                        <td>Sim</td>
+                        <td>
+                            <a role="button" class="btn btn-primary" asp-controller="DeviceAdmin" asp-action="EditarCliente">Editar</a>
+                            <a role="button" class="btn btn-danger" asp-controller="DeviceAdmin" asp-action="ApagarClienteConfirmacao">Apagar</a>
+                        </td>
+                    </tr>
+                    @if(Model != null && Model.Item2.Any())
+                    {
+                        foreach(PessoaModel pessoa in Model.Item2)
+                        {
+                            ClienteModel cliente = new ClienteModel();
+                            cliente = Model.Item1.Find(x => x.IdPessoa == pessoa.IdPessoa);
+                            TelefoneModel telefone = new TelefoneModel();
+                            telefone = Model.Item3.Find(x => x.IdPessoa == pessoa.IdPessoa);
+                            <tr class ="text-gray-700 hover:text-orange-400">
+                                <td>@pessoa.Nome</td>
+                                <td>@pessoa.Cpf</td>
+                                <td>@telefone.Celular</td>
+                                <td>@pessoa.Ativo</td>
+                                <td>
+                                    <a role="button" class="btn btn-primary" asp-controller="DeviceAdmin" asp-action="EditarCliente" asp-route-id="@cliente.IdCliente">Editar</a>
+                                    <a role="button" class="btn btn-danger" asp-controller="DeviceAdmin" asp-action="ApagarClienteConfirmacao" asp-route-id="@cliente.IdCliente">Apagar</a>
+                                </td>
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
         </div>
     </div> 
 </div>
-<!-- Modal -->
-<div id="myModal" class="fixed inset-0 hidden items-center justify-center bg-gray-800 bg-opacity-50" data-modal-target="myModal">
-    <div class="bg-white p-4 rounded-lg max-w-lg mx-auto">
-        <h2 class="text-xl font-bold mb-4">LIGA ALGO</h2>
-        <p class="mb-4">VAI ME LIGA VAI!!!!</p>
+@section Scripts {
 
-        <form asp-controller="Arduino" asp-action="TurnOnLed" method="post">
-            <button type="submit" class="bg-green-500 text-white px-4 py-2 rounded">LIGA ESSA MERDA</button>
-        </form>
-
-        <form asp-controller="Arduino" asp-action="TurnOffLed" method="post">
-            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Close</button>
-        </form>
-    </div>
-</div>
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese-Brasil.json"
+                }
+            });
+        });
+    </script>
+}
