--- a/Views/DeviceAdmin/EditarCliente.cshtml
+++ b/Views/DeviceAdmin/EditarCliente.cshtml
@@ -1,9 +1,16 @@
 ﻿@using SmartBoard.Models
-@model PessoaClienteViewModel
+@model PessoaClienteUpdateViewModel
 @{
     Layout = "_LayoutTecnico";
-    ViewData["Title"] = "SmartBoard Do TECNICO";
+    ViewData["Title"] = "SmartBoard Do Admin - Editar Cliente";
 
+}
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success text-center" role="alert">
+        @TempData["MensagemSucesso"]
+    </div>
 }
 @if (TempData["MensagemErro"] != null)
 {
@@ -15,7 +22,9 @@
 
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 flex mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle w-full">
-        <form asp-action="CadastrarCliente" method="post" class="w-5/12">
+        <form asp-action="EditarCliente" method="post" class="w-5/12">
+            <input type="hidden" asp-for="Cliente.IdCliente" />
+            <input type="hidden" asp-for="Pessoa.IdPessoa" />
             <div class="form-group mb-3 mt-3">
                 <label for="Nome">Nome Completo: </label>
                 <div class="relative">
@@ -38,12 +47,6 @@
                             ps-10 p-2.5" placeholder="email@dominio.com" />
                 </div>
                 @Html.ValidationMessageFor(x => x.Pessoa.Email)
-            </div>
-            <div class="form-group mb-3 mt-3">
-                <label for="exampleInputPassword1">Senha: </label>
-                <input type="password" class="form-control border
-                            text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full" asp-for="Pessoa.Senha" placeholder="Sua Senha">
-                @Html.ValidationMessageFor(x => x.Pessoa.Senha)
             </div>
             <div class="form-group mb-3 mt-3">
                 <label for="cpf">CPF: </label>
@@ -73,7 +76,7 @@
             </div>
 
             <div class="form-group mb-3 mt-3">
-                <label for="telefone">Telefone: </label>
+                <label for="telefone">Celular: </label>
                 <div class="relative">
                     <input type="text" asp-for="Telefone.Numero"  maxlength="15" type="text" class="form-control border
                             text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full" />
@@ -81,12 +84,21 @@
                 @Html.ValidationMessageFor(x => x.Telefone.Numero)
             </div>
 
-            <button type="submit" class="text-white bg-gradient-to-r from-[#202020] via-[#171717] to-[#030303]
-                    hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-[#404040]
-                    dark:focus:ring-[#000000] shadow-lg shadow-gray dark:shadow-lg dark:shadow-black
-                    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-full">
-                Cadastrar
-            </button>
+            <div class="form-group mb-3 mt-3">
+                <label for="ativo">Ativo: </label>
+                <div class="relative">
+                    <input type="checkbox" asp-for="Pessoa.Ativo" />
+                </div>
+            </div>
+            <div class="w-full">
+                <button type="submit" class="text-white bg-gradient-to-r from-[#202020] via-[#171717] to-[#030303]
+                        hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-[#404040]
+                        dark:focus:ring-[#000000] shadow-lg shadow-gray dark:shadow-lg dark:shadow-black
+                        font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 w-5/12">
+                    Alterar
+                </button>
+                <a class="btn btn-secondary btn-block justify-center align-middle mx-auto w-5/12" asp-controller="DeviceAdmin" asp-action="HomeAdmin" role="button">Voltar</a>
+            </div>
         </form>
     </div>
 </div>
