--- a/Views/DeviceTecnico/ListarDispositivoClientes.cshtml
+++ b/Views/DeviceTecnico/ListarDispositivoClientes.cshtml
@@ -1,23 +1,16 @@
 @using SmartBoard.Models
-@model Tuple<List<ClienteModel>, List<PessoaModel>, List<TelefoneModel>>
+@model Tuple<ClienteModel, List<DispositivoModel>, List<AmbienteModel>, List<TipoDispositivoModel>>
 @{
     Layout = "_LayoutAdmin";
-    ViewData["Title"] = "SmartBoard do Admin";
+    ViewData["Title"] = "SmartBoard Técnico - Lista de Dispositivos Cliente";
 }
 <style>
-    .dt-container{
-        mmin-width: 400px;
-        max-width: 100%;
-        width: 100%;
-    }
     .content-table {
         border-collapse: collapse;
         margin: 25px 0;
         font-size: 0.9em;
         font-family: sans-serif;
         min-width: 400px;
-        max-width: 100%;
-        width: 100%;
         border-radius: 5px 5px 0 0;
         overflow: hidden;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -46,52 +39,45 @@
                 border-bottom: 2px solid #808080;
             }
 
+            .content-table tbody tr.active-row {
+                font-weight: bold;
+                color: #ffa500;
+            }
 </style>
-
-@if (TempData["MensagemSucesso"] != null)
-{
-    <div class="alert alert-success text-center" role="alert">
-        @TempData["MensagemSucesso"]
-    </div>
-}
-@if (TempData["MensagemErro"] != null)
-{
-    <div class="alert alert-danger text-rose-600 text-center" role="alert">
-        @TempData["MensagemErro"]
-    </div>
-}
 
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle w-full">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-3">
+            <a role="button" class="btn btn-primary" asp-controller="DeviceTecnico" asp-action="AdicionarDispositivoCliente" asp-route-id="@Model.Item1.IdCliente">Adicionar Contato</a>
+        </div>
         <span class="text-xl text-gray-800 w-4/5 align-middle text-center font-bold justify-center">Bem Vindo, Segue a lista de clientes disponíveis.</span>
         <div class="flex flex-wrap justify-center align-middle w-4/5 mt-12">
-            <table id="myTable" class="content-table w-full">
+            <table id="myTable" class="content-table">
                 <thead>
                     <tr>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Telefone</th>
-                        <th>Ativo</th>
-                        <th>Ações</th>
+                        <th>Nome Dispositivo</th>
+                        <th>Porta</th>
+                        <th>Ambiente</th>
+                        <th>Tipo de Dispositivo</th>
                     </tr>
                 </thead>
                 <tbody>
                     @if(Model != null && Model.Item2.Any())
                     {
-                        foreach(ClienteModel cliente in Model.Item1)
+                        foreach(DispositivoModel dispositivo in Model.Item2)
                         {
-                            PessoaModel pessoa = new PessoaModel();
-                            pessoa = Model.Item2.Find(x => x.IdPessoa == cliente.IdPessoa);
-                            TelefoneModel telefone = new TelefoneModel();
-                            telefone = Model.Item3.Find(x => x.IdPessoa == pessoa.IdPessoa);
+                            AmbienteModel ambiente = new AmbienteModel();
+                            ambiente = Model.Item3.Find(x => x.IdAmbiente == dispositivo.IdAmbiente);
+                            TipoDispositivoModel tipoDispositivo = new TipoDispositivoModel();
+                            tipoDispositivo = Model.Item4.Find(x => x.IdTipoDispositivo == dispositivo.IdTipoDispositivo);
+
                             <tr class ="text-gray-700 hover:text-orange-400">
-                                <td>@pessoa.Nome</td>
-                                <td>@pessoa.Cpf</td>
-                                <td>@telefone.Numero</td>
-                                <td>@pessoa.Ativo</td>
+                                <td>@dispositivo.Nome</td>
+                                <td>@dispositivo.Porta</td>
+                                <td>@ambiente.Nome</td>
+                                <td>@tipoDispositivo.Nome</td>
                                 <td>
-                                    <a role="button" class="btn btn-primary" asp-controller="DeviceAdmin" asp-action="EditarCliente" asp-route-id="@cliente.IdCliente">Editar</a>
-                                    <a role="button" class="btn btn-danger" asp-controller="DeviceAdmin" asp-action="ApagarClienteConfirmacao" asp-route-id="@cliente.IdCliente">Apagar</a>
+                                    <a role="button" class="btn btn-primary" asp-controller="DeviceTecnico" asp-action="EditarDispositivoCliente" asp-route-id="@dispositivo.IdDispositivo">Editar</a>
                                 </td>
                             </tr>
                         }
