--- a/Views/DeviceTecnico/ListarDispositivoClientes.cshtml
+++ b/Views/DeviceTecnico/ListarDispositivoClientes.cshtml
@@ -48,7 +48,7 @@
 <div class="bg-white rounded-xl shadow-lg py-7 px-7 mt-5 justify-center">
     <div class="flex flex-wrap justify-center align-middle w-full">
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-3">
-            <a role="button" class="btn btn-primary" asp-controller="DeviceTecnico" asp-action="AdicionarDispositivoCliente" asp-route-id="@Model.Item1.IdCliente">Adicionar Contato</a>
+            <a role="button" class="btn btn-primary" asp-controller="DeviceTecnico" asp-action="AdicionarDispositivoCliente" asp-route-id="@Model.Item1.IdCliente">Adicionar Ambiente</a>
         </div>
         <span class="text-xl text-gray-800 w-4/5 align-middle text-center font-bold justify-center">Bem Vindo, Segue a lista de clientes disponíveis.</span>
         <div class="flex flex-wrap justify-center align-middle w-4/5 mt-12">
